<resources>
    <string name="app_name">Costs</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">New</string>
    <string name="title_activity_add_acticity">AddActicity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="add_name">Name</string>
    <string name="add_description">Description</string>
    <string name="add_price">Price</string>
    <string name="add_date">Date</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_filter">Filter</string>
    <string name="action_categories">Categories</string>
    <string name="add_category">Category</string>
    <string name="title_activity_categories">Categories</string>
    <string name="newCategory">New category</string>
    <string name="editCategory">Edit category</string>
    <string name="title_activity_settings">Settings</string>
    <string name="import_btn">Import</string>
    <string name="export_btn">Export</string>
</resources>
