<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.costs.view.MainActivity">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="1"
        android:title="@string/action_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="2"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="3"
        android:title="@string/action_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_categories"
        android:orderInCategory="3"
        android:title="@string/action_categories"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
